--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,15 @@
 
 __MACOSX/*
+
+### VisualStudioCode ###
 .vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+
+### VisualStudioCode Patch ###
+# Ignore all local history of files
+**/.history
+
+
